.header {     padding-top: 3px;     width: 100%;     background-color: #b22830;     display: flex;     flex-wrap: wrap;     align-items: center; } #selection {     margin-right: 25px;     color: white; }

--- a/ThietKeWeb/Views/Shared/MasterLayout.cshtml
+++ b/ThietKeWeb/Views/Shared/MasterLayout.cshtml
@@ -87,7 +87,7 @@
             list-style-type: none;
         }
 
-        a {
+        .menu a {
             color: white;
             font-size: 18px;
             text-decoration: none;
@@ -96,7 +96,7 @@
 
         #selection {
             margin-right: 25px;
-            color: black;
+            color: white;
         }
 
         .selection-image {
