--- a/ThietKeWeb/Views/Home/Index.cshtml
+++ b/ThietKeWeb/Views/Home/Index.cshtml
@@ -12,6 +12,8 @@
 
     body {
         font-family: Arial, sans-serif;
+        font-size: 30px;
+        font-weight: bold;
         background-color: #f0f0f0;
     }
 
@@ -104,21 +106,17 @@
     }
 
     .image1 {
-        float: left;
         display: block;
-        width: 49%;
-        height: 380px;
-        border-radius: 4px;
-        margin-left: 8px;
+        width: 100%;
+        height: 50%;
+        border-radius: 2px;
     }
 
     .image2 {
-        float: right;
         display: block;
-        width: 49%;
-        height: 380px;
-        border-radius: 4px;
-        margin-right: 8px;
+        width: 100%;
+        height: 50%;
+        border-radius: 2px;
     }
 
     .ad {
@@ -127,13 +125,6 @@
         align-items: center;
     }
 
-    .image3 {
-        display: block;
-        width: 25%;
-        height: 200px;
-        border-radius: 4px;
-        gap: 20px;
-    }
 
     .list-background {
         display: flex;
@@ -334,7 +325,7 @@
 
     #footer {
         margin-top: 15px;
-        background-color: orangered;
+        background-color: #5e311e;
         color: white;
         font-size: 18px;
         clear: both;
@@ -405,19 +396,15 @@
                 </ul>
             </li>
             <li><a href="~/Home/Recruit" class="menu3">Tuyển dụng</a></li>
+            <li><a href="~/Home/About us" class="menu3">Về chúng tôi</a></li>
             <li><a href="~/Home/Address" class="menu3">Địa chỉ</a></li>
         </ul>
     </div>
 </header>
 <section>
-    <img src="~/Content/images/banner2.jpg" class="image1" />
-    <img src="~/Content/images/banner.jpg" class="image2" />
-    <div class="ad">
-        <img src="~/Content/images/78a5853531ae97f0cebf10.jpg" class="image3" />
-        <img src="~/Content/images/660e8447fedd588301cc6.jpg" class="image3" />
-        <img src="~/Content/images/a886e1ca9b503d0e64415.jpg" class="image3" />
-        <img src="~/Content/images/fa1311596bc3cd9d94d27.jpg" class="image3" />
-    </div>
+    <img src="~/Content/images/banner9.png" class="image1"/>
+    <img src="~/Content/images/banner8.png" class="image2" />
+
 </section>
 <section id="featureProd">
     <div class="prod-list">
