--- a/ThietKeWeb/Views/Home/LogIn.cshtml
+++ b/ThietKeWeb/Views/Home/LogIn.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Login";
     Layout = "~/Views/Shared/MasterLayout.cshtml";
 }
@@ -15,7 +14,6 @@
           href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <title>Signup</title>
     <link href="~/Content/stylesheet1.css" rel="stylesheet" />
-    <link href="~/Content/stylesheet1.css" rel="stylesheet" />
 </head>
 <body>
     <div class="login">
@@ -27,7 +25,7 @@
         <div class="login-or"><span>Or</span></div>
         <form action="#" class="login-form" autocomplete="off">
             <label for="email" class="login-label">Email</label>
-            <input type="email" id="email" class="login-input" placeholder="Eg: nhan1905@gmai.com">
+            <input type="email" id="email" class="login-input" placeholder="Eg: NguyenVanA@gmai.com">
             <label for="password" class="login-label">Password</label>
             <input type="password" id="password" class="login-input">
             <button class="login-submit">Login</button>
