--- a/ThietKeWeb/Views/Shared/MasterLayout.cshtml
+++ b/ThietKeWeb/Views/Shared/MasterLayout.cshtml
@@ -1,5 +1,4 @@
 ﻿<!DOCTYPE html>
-
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
@@ -303,9 +302,9 @@
 
         #footer {
             margin-top: 15px;
-            background-color: orangered;
+            background-color: #5e311e;
             color: white;
-            font-size: 18px;
+            font-size: 10px;
             clear: both;
             display: flex;
             justify-content: space-between;
